2.9.4 - logica para implementacao das fotos dos imoveis na S3 da AWS, logica de edicao de um imovel